crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF200_bleach.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
pyproject.toml:5:16: RUF200 (invalid-pyproject-toml) Failed to parse pyproject.toml: after parsing `1.1.0`, found `<1.2`, which is not part of a valid version
tinycss2>=1.1.0<1.2
        ^^^^^^^^^^^
  |
3 |   version = "0.1.0"
4 |   # There's a comma missing here
5 |   dependencies = [
  |  ________________^
6 | |   "tinycss2>=1.1.0<1.2",
7 | | ]
  | |_^ RUF200 (invalid-pyproject-toml)
  |
