crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF200_invalid_author.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
pyproject.toml:5:11: RUF200 (invalid-pyproject-toml) Failed to parse pyproject.toml: a table with 'name' and/or 'email' keys
  |
3 |   version = "0.1.0"
4 |   # Ensure that the spans from toml handle utf-8 correctly
5 |   authors = [
  |  ___________^
6 | |     { name = "Z͑ͫ̓ͪ̂ͫ̽͏̴̙̤̞͉͚̯̞̠͍A̴̵̜̰͔ͫ͗͢L̠ͨͧͩ͘G̴̻͈͍͔̹̑͗̎̅͛́Ǫ̵̹̻̝̳͂̌̌͘", email = 1 }
7 | | ]
  | |_^ RUF200 (invalid-pyproject-toml)
  |
